[package]
name = "atools"
version = "0.1.7"
edition = "2021"
description = "const generic expr based fixed length array manipulation"
authors = ["bend-n <bend.n@outlook.com>"]
license = "MIT"
repository = "https://github.com/bend-n/atools"
keywords = ["array"]
categories = ["no-std"]
rust-version = "1.85"
